k8s/overlays/lab/image-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wulims
  namespace: wulims
spec:
  template:
    spec:
      containers:
        - name: wulims
          image: ghcr.io/walsh-university/wulims@sha256:3579e7108b35b78aca94d4c69711bfe7ac788fe7f5dee5b6decfa0b09f818fc3
