k8s/overlays/lab/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wulims
  namespace: wulims
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: wulims
          # Optional: if you want to use overlay to control tag without kustomize images:
          # image: ghcr.io/walsh-university/wulims:main
